# rawrtc-terminal-demo

./: .gitignore  LICENSE  Readme.md  init.js
c/: CMakeLists.txt
c/src/: CMakeLists.txt  rawrtc-terminal.c
c/src/helper/: CMakeLists.txt  common.c  common.h  handler.c  handler.h  parameters.c  parameters.h  utils.c  utils.h
signaling/: Readme.md  requirements.txt  server.py
web/: app.css  app.js  index.html  init.js  main.css  package.json  rtcEvents.js  sdp.js  socketAdapter.js  web-terminal.html  webrtc-rawrtc.js
